[package]
name = "rand_derive"
version = "0.1.0"
authors = ["bluss"]
license = "MIT/Apache-2.0"
description = "Implementation of `derive(Rand)` for `custom_derive!{}`. Produces an implementation of `rand::Rand` automatically for enums and structs."
repository = "https://github.com/bluss/rand_derive"
documentation = "https://bluss.github.io/rand_derive"

keywords = ["rand", "derive", "macro"]

[dependencies]
parse-macros = "0.1"
parse-generics-shim = "0.1"

[dev-dependencies]
custom_derive = "0.1.5"
rand = "0.3"
