[package]
name = "rand_derive"
version = "0.2.0"
authors = ["bluss"]
license = "MIT/Apache-2.0"
description = "Implementation of `derive(Rand!)` for `macro_attr!{}`. Produces an implementation of `rand::Rand` automatically for enums and structs."
repository = "https://github.com/bluss/rand_derive"
documentation = "https://docs.rs/rand_derive/"
keywords = ["rand", "derive", "macro"]

[dependencies]
parse-macros = "0.1"
parse-generics-shim = "0.1"

[dev-dependencies]
macro-attr = "0.2.0"
rand = "0.3"
